--- a/index.html
+++ b/index.html
@@ -2,110 +2,91 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Empowered Reborn</title>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
-  <style>
-    * { box-sizing: border-box; }
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; background: #f5f7fa; color: #333; min-height: 100vh; display: flex; flex-direction: column; }
-    header { background: #007bff; color: white; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 8px rgb(0 0 0 / 0.1); }
-    header h1 { margin: 0; font-weight: 600; font-size: 1.5rem; }
-    header button { background: transparent; border: 1.5px solid white; color: white; padding: 0.4rem 1rem; border-radius: 4px; cursor: pointer; font-weight: 600; transition: background-color 0.3s ease, color 0.3s ease; }
-    header button:hover { background-color: white; color: #007bff; }
-    main { flex: 1; padding: 1.5rem 2rem; max-width: 800px; margin: 0 auto; width: 100%; }
-    #login { max-width: 320px; margin: 3rem auto; background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 0 20px rgb(0 123 255 / 0.15); display: flex; flex-direction: column; gap: 1rem; }
-    #login input { padding: 0.7rem 1rem; border: 1.5px solid #ddd; border-radius: 5px; font-size: 1rem; transition: border-color 0.3s ease; }
-    #login input:focus { outline: none; border-color: #007bff; box-shadow: 0 0 5px rgba(0, 123, 255, 0.4); }
-    #login button { padding: 0.75rem; font-size: 1rem; border: none; background: #007bff; color: white; font-weight: 600; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease; }
-    #login button:hover { background: #0056b3; }
-    #authError { color: #d93025; font-weight: 600; min-height: 1.25rem; }
-    #main, #classDetails, #studentDetails { display: none; }
-    h2, h3 { margin-top: 0; }
-    .section-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem; }
-    .fab { position: fixed; bottom: 20px; right: 20px; font-size: 28px; background: #007bff; color: white; border-radius: 50%; padding: 15px 17px; cursor: pointer; box-shadow: 0 3px 8px rgba(0, 123, 255, 0.7); transition: background-color 0.3s ease; user-select: none; }
-    .fab:hover { background: #0056b3; }
-    #classes, #students, #assignments { background: white; border-radius: 8px; padding: 1rem; box-shadow: 0 0 12px rgb(0 0 0 / 0.05); max-height: 350px; overflow-y: auto; }
-    #classes > div, #students > div, #assignments > div { padding: 0.6rem 0.8rem; border-bottom: 1px solid #eee; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: background-color 0.2s ease; font-weight: 500; }
-    #classes > div:hover, #students > div:hover, #assignments > div:hover { background: #e6f0ff; }
-    #classes > div:last-child, #students > div:last-child, #assignments > div:last-child { border-bottom: none; }
-    .modal { display: none; position: fixed; top: 50%; left: 50%; width: 320px; max-width: 90%; transform: translate(-50%, -50%); background: white; padding: 1.5rem 1.75rem; box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); border-radius: 10px; z-index: 1000; }
-    .modal.show { display: block; }
-    .modal label { font-weight: 600; margin-bottom: 0.25rem; display: block; }
-    .modal input, .modal select { width: 100%; padding: 0.5rem; margin-bottom: 1rem; border-radius: 5px; border: 1.5px solid #ccc; font-size: 1rem; transition: border-color 0.3s ease; }
-    .modal input:focus, .modal select:focus { outline: none; border-color: #007bff; box-shadow: 0 0 5px rgba(0, 123, 255, 0.4); }
-    .modal button { background: #007bff; border: none; color: white; font-weight: 600; padding: 0.75rem; border-radius: 6px; cursor: pointer; width: 100%; font-size: 1rem; transition: background-color 0.3s ease; }
-    .modal button:hover { background: #0056b3; }
-    #overlay { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0,0,0,0.4); z-index: 999; }
-    #overlay.show { display: block; }
-    @media (max-width: 600px) { main { padding: 1rem; } .fab { padding: 12px 14px; font-size: 22px; } }
-  </style>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Empowered Reborn</h1>
-    <button id="logoutBtn" style="display:none;">Logout</button>
-  </header>
-  <main>
-    <section id="login">
-      <h2>Login / Sign Up</h2>
-      <input type="email" id="email" placeholder="Email" autocomplete="username" />
-      <input type="password" id="password" placeholder="Password" autocomplete="current-password" />
-      <div style="display:flex; gap: 10px;">
-        <button onclick="signUp()">Sign Up</button>
-        <button onclick="login()">Login</button>
-      </div>
-      <div id="authError"></div>
-    </section>
-    <section id="main">
-      <div class="section-header">
-        <h2 id="welcome"></h2>
-      </div>
-      <div id="classes">No classes registered</div>
-      <div class="fab" title="Add Class" onclick="showClassModal()">+</div>
-    </section>
-    <section id="classDetails">
-      <div class="section-header">
-        <h3 id="classTitle"></h3>
-        <button onclick="backToMain()" style="padding:0.3rem 0.7rem; cursor:pointer;">&larr; Back</button>
-      </div>
-      <div id="students">No students registered</div>
-      <div class="fab" title="Add Student" onclick="showAddStudentModal()">+</div>
-    </section>
-    <section id="studentDetails">
-      <div class="section-header">
-        <h3 id="studentName"></h3>
-        <button onclick="backToClass()" style="padding:0.3rem 0.7rem; cursor:pointer;">&larr; Back</button>
-      </div>
-      <div id="assignments">No assignments registered</div>
-      <div class="fab" title="Add Assignment" onclick="showAddAssignmentModal()">+</div>
-    </section>
-  </main>
-  <div id="overlay"></div>
-  <div id="classModal" class="modal">
-    <label for="className">Class Name</label>
-    <input type="text" id="className" placeholder="Class Name" />
-    <label for="gradingFormat">Grading Format</label>
-    <select id="gradingFormat">
-      <option value="EDM">E / D / M</option>
-      <option value="1-4">1 - 4</option>
-    </select>
-    <button onclick="createClass()">Create Class</button>
+  <div class="container">
+    <h1>Welcome to Empowered Reborn</h1>
+
+    <div id="auth-section">
+      <h2>Sign Up</h2>
+      <input type="email" id="signup-email" placeholder="Email" />
+      <input type="password" id="signup-password" placeholder="Password" />
+      <button onclick="signUp()">Sign Up</button>
+
+      <h2>Login</h2>
+      <input type="email" id="login-email" placeholder="Email" />
+      <input type="password" id="login-password" placeholder="Password" />
+      <button onclick="login()">Login</button>
+      <button onclick="logout()">Logout</button>
+    </div>
+
+    <div id="user-content" style="display: none;">
+      <h2>Welcome, <span id="user-email"></span></h2>
+      <p>You are logged in to Empowered Reborn.</p>
+    </div>
   </div>
-  <div id="studentModal" class="modal">
-    <label for="studentNameInput">Student Name</label>
-    <input type="text" id="studentNameInput" placeholder="Student Name" />
-    <button onclick="addStudent()">Add Student</button>
-  </div>
-  <div id="assignmentModal" class="modal">
-    <label for="assignmentNameInput">Assignment Name</label>
-    <input type="text" id="assignmentNameInput" placeholder="Assignment Name" />
-    <label for="assignmentScoreInput">Score</label>
-    <input type="number" step="any" id="assignmentScoreInput" placeholder="Score" />
-    <button onclick="addAssignment()">Add Assignment</button>
-  </div>
-  <script src="app.js"></script>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBxGeeo9JJ84wPVw1Vvo5zRcI29AlNq6zQ",
+      authDomain: "empowered-reborn.firebaseapp.com",
+      projectId: "empowered-reborn",
+      storageBucket: "empowered-reborn.appspot.com",
+      messagingSenderId: "560738876133",
+      appId: "1:560738876133:web:0d7fb5b22421f1fe2cf20c"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    function signUp() {
+      const email = document.getElementById("signup-email").value;
+      const password = document.getElementById("signup-password").value;
+      auth.createUserWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          alert("Sign up successful!");
+          showUserContent(userCredential.user);
+        })
+        .catch((error) => alert(error.message));
+    }
+
+    function login() {
+      const email = document.getElementById("login-email").value;
+      const password = document.getElementById("login-password").value;
+      auth.signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          alert("Login successful!");
+          showUserContent(userCredential.user);
+        })
+        .catch((error) => alert(error.message));
+    }
+
+    function logout() {
+      auth.signOut().then(() => {
+        document.getElementById("auth-section").style.display = "block";
+        document.getElementById("user-content").style.display = "none";
+      });
+    }
+
+    function showUserContent(user) {
+      document.getElementById("auth-section").style.display = "none";
+      document.getElementById("user-content").style.display = "block";
+      document.getElementById("user-email").textContent = user.email;
+    }
+
+    auth.onAuthStateChanged((user) => {
+      if (user) {
+        showUserContent(user);
+      } else {
+        document.getElementById("auth-section").style.display = "block";
+        document.getElementById("user-content").style.display = "none";
+      }
+    });
+  </script>
 </body>
 </html>
