--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Empowered Reborn</title>
+  <title>Empowere Reborn</title>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
@@ -251,7 +251,7 @@
 </head>
 <body>
   <header>
-    <h1>Empowered Reborn</h1>
+    <h1>Empower Reborn</h1>
     <button id="logoutBtn" style="display:none;">Logout</button>
   </header>
 
